--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -34,7 +34,7 @@
   <div class="container">
     <img src="logo.png" alt="SilentSniper Labs Logo" />
     <h1>SilentSniper Labs</h1>
-    <p>Desarrollamos inteligencia artificial, bots de scalping en tiempo real, y soluciones para traders exigentes. ¡Bienvenido al laboratorio del francotirador silencioso!</p>
+    <p>We build cutting-edge AI systems, real-time trading bots and tools for serious traders. Welcome to the lab of the silent sniper.</p>
   </div>
 </body>
 </html>
